--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pure-react-carousel": "^1.30.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.1.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "zustand": "^4.5.2"
